html: first steps with css

--- a/html5-playground/index.html
+++ b/html5-playground/index.html
@@ -3,19 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <title>HTML5 Minimum</title>
+
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" rel="stylesheet">
   </head>
   <body>
 
     <h1>Hallo Welt!</h1>
 
     <p>
-      Dies ist eine minimale HTML5 Seite
+      Dies ist eine <a href="https://angular.schule">minimale</a> HTML5 Seite
     </p>
 
     <ul>
-      <li style="display: inline-block;">Liste</li>
-      <li style="display: inline-block;">Liste</li>
+      <li>Liste</li>
+      <li>Liste</li>
     </ul>
 
   </body>
-</html>
+</html> 
