first steps with node + npm

--- a/html5-playground/index.html
+++ b/html5-playground/index.html
@@ -4,16 +4,22 @@
     <meta charset="utf-8" />
     <title>HTML5 Minimum</title>
 
-    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
+
   </head>
   <body>
 
-    <h1>Hallo Welt!</h1>
+    <h1>Hallo Welt! 🤪😍</h1>
 
     <p>
       Dies ist eine <a href="https://angular.schule">minimale</a> HTML5 Seite
     </p>
+
+    <i class="fa fa-user-circle"></i>
+    <i class="fa fa-html5"></i>
 
     <ul>
       <li>Liste</li>
