--- a/html5-playground/index.html
+++ b/html5-playground/index.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8" />
     <title>HTML5 Minimum</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="node_modules/roboto-fontface/css/roboto/roboto-fontface.css">
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="style.css">
 
   </head>
